--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,4 +1,4 @@
-@media screen and (min-device-width: 481px) and (max-device-width: 768px) {
+@media screen and (min-width: 481px) and (max-width: 768px) {
   body {
     margin: 0px;
   }
@@ -55,10 +55,6 @@
   .container #accommodation {
     padding-left: 20px;
   }
-  .accom-container .accommodations {
-    width: 100%;
-    margin-right: 0px;
-  }
   .accom-container {
     display: flex;
     flex-direction: column;
@@ -68,8 +64,8 @@
     background-color: #ffffff;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 0px 20px 20px 0px;
-    margin-right: 20px;
+    padding: 0px;
+    margin-right: 0px;
   }
   .accom-container .accommodations .accom-list {
     justify-content: space-between;
@@ -159,6 +155,7 @@
   }
   .activities .activities-item .activities-sub-item {
     margin-bottom: 20px;
+    flex: 1 1 100%;
   }
   .activities .activities-item .activities-sub-item:last-child {
     margin-bottom: 0px;
